# telemetry-publisher

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  env.toml  pyproject.toml
setup/: collect-and-publish.bash  compile.py  dotenv-from-toml.py  run.bash
src/app/: Collector.py  Kafka.py  Logger.py  __main__.py  config.py  run.py
src/plotter/: Kafka.py  Plot.py  README.md  create.py  env.toml  requirements.txt
tests/: conftest.py  pytest.ini
tests/unit/: app-Collector-test.py  app-Logger-test.py
