[tool.poetry]
name = "telemetry-publisher"
version = "0.7.2"
description = "Telemetry publisher to Apache Kafka"
authors = ["Fernando Abreu <49952773+nandoabreu@users.noreply.github.com>"]
license = "MIT License"
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
tomli = { version = "^2.0.2", python = "<3.11" }
python-decouple = "^3.8"
python-dateutil = "^2.9.0.post0"
confluent-kafka = "^2.6.0"
psutil = "^6.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
